--- a/test/fixtures/transactions.yml
+++ b/test/fixtures/transactions.yml
@@ -1,17 +1,19 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_name: MyString
-  last_name: MyString
-  amount: 1
-  from_currency: MyString
-  to_currency: MyString
+  first_name: John
+  last_name: Doe
+  from_amount_cents: 1001
+  to_amount_cents: 1001
+  from_currency: 'USD'
+  to_currency: <%= (Transaction::AVAILABLE_CURRENCIES - ['USD']).sample %>
   manager: one
 
 two:
-  first_name: MyString
-  last_name: MyString
-  amount: 1
-  from_currency: MyString
-  to_currency: MyString
+  first_name: Nick
+  last_name: Fury
+  from_amount_cents: 1
+  to_amount_cents: 2
+  from_currency: 'USD'
+  to_currency: <%= (Transaction::AVAILABLE_CURRENCIES - ['USD']).sample %>
   manager: two
